
Other bug fixes:

  o Fix [2262177] SoX build could fail with parse /etc/issue error.  (robs)
  o Fix reading AIFF files with pad bytes in COMT chunks. (Joe Holt)
  o Fix AIFF file length bug to stop reading trash data on files that
    have extra chunks at end of file. (Joe Holt)
  o Fix file length being 4 bytes short for AIFF sowt CD tracks. (Joe Holt)

Internal improvements:

  o 


sox-14.2.0	2008-11-09
----------

Previously deprecated features that have been removed in this release:

  Deprec-  Feature    [O(ption)]
  ated in  [F(ormat)] [E(ffect)]   Replacement
  -------  ----------------------  ----------------------
  14.0.0   E pitch                 new pitch = old key

Previously deprecated features (to be removed in future):

  Deprec-  Feature    [O(ption)]                           Removal
  ated in  [F(ormat)] [E(ffect)]   Replacement             due after
  -------  ----------------------  ----------------------  -------
  14.1.0   E resample              ~= rate                 2009-01-29
  14.1.0   E polyphase             ~= rate                 2009-01-29
  14.1.0   E rabbit                ~= rate                 2009-01-29
  14.1.0   F flac: libFLAC 1.1.1   libFLAC > 1.1.1         2009-01-29
  14.1.0   F wve (native)          wve (libsndfile)        2009-07-29
  14.1.0   Behaviour whereby       soxi                    2009-07-29
           sox -V file(s) -n
           doesn't read to EOF.

Newly deprecated features (to be removed in future):

  Deprec-  Feature    [O(ption)]                           Removal
  ated in  [F(ormat)] [E(ffect)]   Replacement             due after
  -------  ----------------------  ----------------------  -------
  14.2.0   E key                   renamed to pitch        14.2.0 + 6 months
  14.2.0   E pan                   ~= mixer/remix          14.2.0 + 6 months

File formats:

  o New `.cvu' unfiltered CVSD; supports any bit-rate.  (robs)
  o New `.sox' native format intended for intermediate files.  (robs)