@@ -2485,13 +2485,9 @@ int main(int argc, char **argv)
     exit(0);
   }
 
-  if (sox_globals.repeatable)
-    lsx_debug("Not reseeding PRNG; randomness is repeatable");
-  else {
-    time_t t;
-
-    time(&t); 
-    srand((unsigned)t);
+  if (!sox_globals.repeatable) { /* Re-seed PRNG? */
+    sox_globals.ranqd1 = (int32_t)time(NULL);
+    srand((unsigned int)sox_globals.ranqd1); /* srand only for polyphase */
   }
 
   /* Save things that sox_sequence needs to be reinitialised for each segued
